1999-06-03  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* init.c (create_tree_of_subclasses_inherited_from): Handle
	NULL strings in diagnostic output.

	* selector.c (__sel_register_typed_name): Likewise.

1999-06-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config/i386/mframe-{freebsd,generic,linux-gnu,openbsd,sysv4.2MP}.h,
	config/powerpc/mframe-{generic,linux-gnu}.h,
	config/sparc/mframe-{generic,sunos4.1.3}.h: Add casts for isdigit
	args.

1999-05-31    <mgd@HELEN>

	* Makefile.am (objc.dll): Depend on dllinit.  Define constructor_func
	for dllinit.c.

1999-05-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (objc.dll): Update per new genctors.
	
	* genctors: Redirect into $1.c.  Use $1 as the function name.

1999-05-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (libobjc.dll): Use $(DLLWRAP), not dllwrap.
	(lib_LTLIBRARIES): Set to @LIBOBJC_LA@.
	(EXTRA_LTLIBRARIES): Set to libobjc.la.
	(bin_PROGRAMS): Set to @OBJC_DLL@.
	(EXTRA_PROGRAMS): Set to objc.dll.
	(install-data-local): New rule for libobjc.a (if USEDLL is set).
	(noinst_LTLIBRARIES): Add libobjc_.la and related variables.
	(libobjc_la_LDFLAGS): Add -rpath $(libdir) so that libtool
	will treat libobjc.la as an installed library.

	* configure.in: Set LIBOBJC_LA or OBJC_DLL depending on if USEDLL
	is set (from md_CHECK_DLL). Substitute LIBOBJC_LA and OBJC_DLL.
	(AC_OUTPUT): Extract objc/externvar.h.

	* Makefile.am (CPPFLAGS): Quote $(EXPORT_EXTERN).  It can't
	be quoted in acdll.m4 because it is extracted into externvar.h.

1999-05-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* misc.c (_objc_malloc, _objc_atomic_malloc, _objc_valloc,
	_objc_realloc, _objc_callc, _objc_free): Add externobjcvardef.

	* class.c: (_objc_lookup_class): Add externobjcvardef.

	* init.c (_objc_load_callback): Add externobjcvardef.

	* configure.in: Use md_CHECK_DLL.

	* Makefile.am (CPPFLAGS): Add -Dexternobjcvar=$(EXPORT_EXTERN).
