@@ -28,7 +28,7 @@ Boston, MA 02111-1307, USA.  */
 #include "runtime.h"
 
 /* Global exit status. */
-int __objc_thread_exit_status = 0;
+externobjcvardef int __objc_thread_exit_status = 0;
 
 /* Flag which lets us know if we ever became multi threaded */
 int __objc_is_multi_threaded = 0;
